dashboard/dashboard-deployment.yaml
apiVersion: apps/v1
#
# Create a deployment ( https://kubernetes.io/docs/concepts/workloads/controllers/deployment/ )
#
kind: Deployment
metadata:
  name: dashboard-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: dashboard
        image: "docker.io/sanskarkatiyar/thingsio-dashboard:latest"
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
        ports:
        - containerPort: 5000
